ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: intent-classifier-ingress
  namespace: intent
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: intent-service
                port:
                  number: 80
